# jadekit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO_LIST.md  dev.bat  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/ai-bridge/: permission-safety.js
src-tauri/src/: error.rs  lib.rs  main.rs  store.rs  tray.rs
src-tauri/src/chat/: agent_id.rs  daemon_client.rs  manager.rs  mod.rs  node_runtime.rs  permission_watcher.rs  pool.rs  protocol.rs  resources.rs  sdk_installer.rs  slash_commands.rs  worktree.rs
src-tauri/src/commands/: advanced_commands.rs  antigravity_commands.rs  backup_commands.rs  chat_commands.rs  deeplink_commands.rs  editor_commands.rs  hermes_commands.rs  mcp_commands.rs  mod.rs  prompt_commands.rs  provider_commands.rs  proxy_commands.rs  session_commands.rs  skill_commands.rs  utility_commands.rs
src-tauri/src/database/: backup.rs  mod.rs  schema.rs
src-tauri/src/deeplink/: mod.rs  parser.rs  provider.rs  utils.rs
src-tauri/src/hermes/: cli_runtime.rs  coordinator.rs  events.rs  mock_runtime.rs  mod.rs  planner.rs  run_lifecycle.rs  runtime.rs  runtime_registry.rs  sdk_runtime.rs  store.rs  supervisor.rs  types.rs
src-tauri/src/mcp/: claude.rs  codex.rs  gemini.rs  import.rs  mod.rs  utils.rs  validation.rs
src-tauri/src/models/: antigravity.rs  app_type.rs  chat.rs  config.rs  mcp.rs  mod.rs  prompt.rs  provider.rs  proxy.rs  skill.rs  subagent.rs  token.rs  usage.rs
src-tauri/src/proxy/: body_filter.rs  circuit_breaker.rs  error.rs  error_mapper.rs  mod.rs  (+11 more)
(+466 files in other folders)
