[package]
name = "jadekit"
version = "1.0.0"
description = "JadeKit desktop app"
authors = ["JadeKit Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jadekit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "5.0"
arboard = "3"
sysinfo = "0.31"
base64 = "0.22"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
bytes = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
indexmap = { version = "2", features = ["serde"] }
zip = "2.2"
futures = "0.3"
toml = "0.8"
serde_yaml = "0.9"
regex = "1"
sha2 = "0.10"
once_cell = "1"
url = "2"
auto-launch = "0.5"
